@@ -22,7 +22,8 @@ Changes Since 0.5
   - Backwards-compatible changes to remove python2.6 -3 deprecation warnings
   - Text nodes now subclass unicode rather than UserString
     (which is gone in python 3.0)
-  - [ 1719345 ] Galician translation 
+  - Apply [ 1719345 ] Galician translation 
+  - Apply [ 1905741 ] polish-translation
 
 * docutils/nodes.py:
 
